# mammo-ood

./: .gitignore  README.md  pyproject.toml  requirements.txt
analysis/: backbone_inspection_overlay_umap.ipynb  resample_inspection.ipynb  study_sample_embed_pretrain.ipynb
configs/: datasets.yaml  models.yaml
configs/experiments/: birads.yaml  cancer.yaml  density.yaml
configs/pretraining/: dinov2_embed.yaml
docs/: data_preparation.md  model_checkpoints.md  model_inspection.md  reproduction.md
scripts/: bootstrap_eval.py  extract_inspection_embeddings.py  make_inspection_samples.py  run_linear_probe.py
src/MaMA/: __init__.py  load_weight.py
src/MaMA/backbones/: encoder_pemed.py  utils.py
src/MaMA/dataset/: constants_val.py
src/mammo_benchmark/: __init__.py  config.py
src/mammo_benchmark/data/: __init__.py  datamodule.py  image_utils.py
src/utils/: __init__.py
tests/: test_exam_aggregation.py  test_inspection_samples.py  test_release_config.py
tools/build_mmap/: __init__.py  bmcd.py  cbis_ddsm.py  cdd_cesm.py  cmmd.py  dbt.py  dmid.py  embed.py  inbreast.py  kau_bcmd.py  mias.py  mm.py  nlbs.py  optimam.py  rsna.py  vindr.py
tools/build_pretrain_mmap/: __init__.py  embed.py
tools/preprocess_images/: README.md  convert_bcmd.py  convert_cbis_ddsm.py  convert_cdd_cesm.py  convert_cmmd.py  convert_dbt.py  convert_dmid.py  convert_embed.py  convert_inbreast.py  convert_kau.py  convert_kau_dicom.py  convert_mias.py  convert_mm.py  convert_nlbs.py  convert_optimam.py  convert_rsna.py  convert_vindr.py  export_optimam_csvs.py  optimam_utils.py
(+89 files in other folders)
